# mma-mcp

./: .gitignore  .mcp.json  ARCHITECTURE-cn.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING-cn.md  CONTRIBUTING.md  Caddyfile.example  DEPLOY-cn.md  DEPLOY.md  LICENSE  README-cn.md  README.md  SECURITY-cn.md  SECURITY.md  TODO.md  VSCODE_MCP_ISSUE.md  mma-mcp.service  pyproject.toml
scripts/: generate_groups.wl
src/mma_mcp/: auth.py  caddyfile.py  config.py  kernel.py  logging_config.py  oauth.py  passwords.py  pool.py  server.py  setup_groups.py  stdio_transport.py
src/mma_mcp/security/: __init__.py  filter.py  registry.py
src/mma_mcp/security/groups/: algebra.json  arithmetic.json  calculus.json  chemistry_biology.json  combinatorics.json  compile.json  crypto.json  data_structures.json  dynamic_eval.json  external_services.json  file_read.json  file_write.json  fractal.json  geometry.json  graph_theory.json  graphics.json  image.json  interpolation.json  linear_algebra.json  list_ops.json  machine_learning.json  manifest.json  math_core.json  networking.json  number_theory.json  optimization.json  plotting_2d.json  plotting_3d.json  programming.json  quantitative.json  signal_processing.json  special_functions.json  statistics.json  string_ops.json  system_exec.json  system_mutation.json  visualization.json
src/mma_mcp/tools/: __init__.py  data.py  evaluate.py  math.py  plot.py  query.py
tests/: test_auth.py  test_cli.py  test_config.py  test_integration.py  test_mcp_e2e.py  test_security.py  test_tools.py
